# tap-azure-log-analytics

./: .env.example  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_azure_log_analytics/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py  test_dynamic_types.py  test_timestamp_chunking.py
